# similarity

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: card_sort_demo.ipynb
respondent_similarity/: _version.py  cooccurrence.py  loaders.py  plot.py  similarity.py
respondent_similarity/tests/: conftest.py  test_cooccurrence.py  test_directories.py  test_loaders.py  test_plot.py  test_similarity.py  test_version.py
respondent_similarity/tests/test_data/: cooccurrence_counts.csv  cooccurrence_counts_empty_diagonal.csv  responses.csv
